frontend/tests/cases/negative/unique/uniqueProduct.gr.output
Type checking failed: 
Ownership error: frontend/tests/cases/negative/unique/uniqueProduct.gr:2:58:
Cannot guarantee usage of reference to value of type `FloatArray id` at permission `Star`.

Linearity error: frontend/tests/cases/negative/unique/uniqueProduct.gr:5:22:
Linear variable `arrs` is used more than once.